[package]
name = "verifier-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
hex = "0.4.3"
openssl = "0.10.63"
pem = "3.0.3"
reqwest = { version = "0.11", features = ["blocking"] }
ring = "0.17.7"
serde = "1.0.196"
serde_json = "1.0.113"
sev = { version = "2.0.2", features = ["openssl", "snp"], default-features = false }
shlex = "1.3.0"
